Add memory benchmarking.